# detex

./: .gitignore  CMakeLists.txt  Detex.vcxproj  Detex.vcxproj.filters  Makefile.am  convert.cpp  dds.cpp  detex.h  file-info.cpp  file-info.h  half-float.cpp  hdr.c  hdr.cpp  ktx.cpp  misc.c  misc.cpp  texture.cpp
DetexTest/: DetexTest.cbp  DetexTest.depend  DetexTest.layout  main.c
DetexTextMSVC/: DetexTextMSVC.sln
DetexTextMSVC/Debug/: DetexTextMSVC.ilk
DetexTextMSVC/DetexTextMSVC/: DetexTextMSVC.cpp  DetexTextMSVC.vcxproj  DetexTextMSVC.vcxproj.filters
DetexTextMSVC/DetexTextMSVC/Debug/: vc142.idb
