# D_ variants are defaults and should always be used
AM_CFLAGS = @D_CFLAGS@ -std=c99 -O2
AM_LDFLAGS = @D_LDFLAGS@

noinst_LIBRARIES = libdetex.a

###############################################################################
##
## Begin Detex library
##

libdetex_a_SOURCES = \
	bits.cpp	\
	bits.h	\
	bptc-tables.cpp	\
	bptc-tables.h	\
	clamp.cpp	\
	convert.cpp	\
	dds.cpp	\
	decompress-bc.cpp	\
	decompress-bptc.cpp	\
	decompress-bptc-float.cpp	\
	decompress-eac.cpp	\
	decompress-etc.cpp	\
	decompress-rgtc.cpp	\
	detex.h	\
	division-tables.cpp	\
	file-info.cpp	\
	file-info.h	\
	half-float.cpp	\
	half-float.h	\
	hdr.cpp	\
	hdr.h	\
	ktx.cpp	\
	misc.cpp	\
	misc.h	\
	texture.cpp

##
## End Detex library
##
###############################################################################
